# kei

./: .env.example  .gitignore  .mise.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPRECATED.md  Dockerfile  README.md  SECURITY.md  build.rs  docker-compose.yml  example.config.toml  justfile
.cargo/: audit.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: check_workflow_hardening.py
.github/workflows/: ci.yml  copilot-setup-steps.yml  coverage-comment.yml  docker-test.yml  docker.yml  release.yml  service-smoke.yml
docker/: entrypoint.sh
docs/: install.md  manifest.md  migration-from-icloudpd.md  product-charter.md  roadmap.md  service.md  synctoken-sys-diag.md  v0.13-migration.md  v0.20-migration.md
fuzz/: Cargo.toml
scripts/: check-contracts  check-roundtrip-gate.sh  check-wiki-commands.sh  notify-synology-photos.sh
scripts/full-test/: backfill_metrics.py  begin_run.sh  check_prereqs.sh  check_userland.sh  collect_metrics.py  diff_runs.sh  finalize_run.sh  history.sh  record_skip.sh  render_summary.py  run_all.sh  run_cross_zone_album_hydration.sh  run_docker_puid_smoke.sh  run_live_import_rehearsal.sh  run_live_smokes.sh  run_real_service_lifecycle.sh  run_release_archive_smoke.sh  run_release_regression_smoke.sh  run_shell_suites.sh  time_phase.sh
scripts/just/: live-env.sh
scripts/test-scenarios/: auth-session.sh  config-docs.sh  fulltest-harness.sh  identity-deltas.sh  lib.sh  list.sh  path-family.sh  pending-recovery.sh  service-health.sh  url-refresh.sh
src/: cli.rs  config.rs  credential.rs  cycle_reporter.rs  fs_util.rs  lib.rs  metrics.rs  migration.rs  notifications.rs  password.rs  report.rs  retry.rs  selection.rs  setup.rs  shutdown.rs  string_interner.rs  sync_cycle.rs  sync_loop.rs  systemd.rs  test_helpers.rs  types.rs  upgrade_hints.rs
src/auth/: endpoints.rs  error.rs  mod.rs  session.rs  srp.rs  twofa.rs
src/commands/: config_cmd.rs  doctor.rs  import.rs  list.rs  login.rs  manifest.rs  mod.rs  password.rs  reconcile.rs  reset.rs  service.rs  status.rs  verify.rs
src/commands/import/wiremock_tests/: icloudpd_compat.rs
src/download/: error.rs  file.rs  filter.rs  finalize.rs  heif.rs  limiter.rs  metadata.rs  metadata_rewrite.rs  mod.rs  paths.rs  pipeline.rs  planner.rs  recap.rs  retry.rs
src/icloud/: error.rs
src/icloud/photos/: album.rs  asset.rs  cloudkit.rs  enc.rs  library.rs  metadata.rs  mod.rs  queries.rs  session.rs  smart_folders.rs  types.rs
src/personality/: active_bar.rs  album_divider.rs  bar_render.rs  cycler.rs  format.rs  mod.rs  narration.rs  pace.rs  progress.rs  progress_card.rs  sparkline.rs  summary.rs  theme.rs  tracing.rs  tty_echo.rs  verbs.rs
src/service/: env.rs  install.rs  linux.rs  macos.rs  mod.rs  plan.rs  run.rs  status.rs  uninstall.rs  windows.rs
src/state/: db.rs  error.rs  mod.rs  schema.rs  types.rs
tests/: README.md  behavioral.rs  branch_static.rs  cli.rs  import_existing_live.rs  service_cli.rs  service_linux.rs  service_macos.rs  service_status.rs  service_windows.rs  state_auth.rs  sync.rs
tests/common/: mod.rs
tests/shell/: concurrency.sh  docker.sh  lib.sh  state-machine.sh
